syntax = "proto3";
package mux;

// Config specifies the information clients require to connect to the proxy.
message Config {
  string proxy_endpoint = 1;
}

// Update is a single update received by the proxy, passed as the actual stringified update object.
message Update {
  bytes json = 1;
}

message ConfigRequest {}

message ConfigResponse {
  Config config = 1;
}

message RegisterRequest {
  string name = 1;
  repeated string matchers = 2;
}

service MultiplexerService {
  rpc GetConfig(ConfigRequest) returns (ConfigResponse);
  rpc RegisterHandler(RegisterRequest) returns (stream Update);
}